@@ -1,5 +1,5 @@
 lib_LIBRARIES = libesim.a
 libesim_a_SOURCES = esim.c esim.h
-AM_CFLAGS = -Wall -Werror -fno-strict-aliasing
+AM_CFLAGS = -Wall -fno-strict-aliasing
 INCLUDES = -I$(top_srcdir)/src/libstruct -I$(top_srcdir)/src/libmhandle
 
