@@ -2,5 +2,5 @@ lib_LIBRARIES = libstruct.a
 libstruct_a_SOURCES = buffer.c buffer.h chrono.c chrono.h config.c config.h \
 	hash.c hash.h heap.c heap.h list.c list.h lnlist.c lnlist.h \
 	repos.c repos.h debug.c debug.h
-AM_CFLAGS = -Wall -Werror -fno-strict-aliasing
+AM_CFLAGS = -Wall -fno-strict-aliasing
 INCLUDES = -I$(top_srcdir)/src/libmhandle
