@@ -614,4 +614,5 @@
 	* syscall.c: system call 'clock_getres' implemented.
 	* syscall.c: system calls 'sched_get_priority_min' and 'sched_get_priority_max'
 		implemented.
+	* Makefile.am: flags '-Werror' removed in all Makefiles.
 
